--- a/src/components/Navbar1.css
+++ b/src/components/Navbar1.css
@@ -1,4 +1,4 @@
-.navbar1 {
+/*.navbar1 {
     display: flex;
     justify-content: flex-end;
     padding: 20px 5% 20px 5%;
@@ -7,4 +7,4 @@
 .logo img {
     width: 84px;
     height: 84px;
-}
+}*/
