--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,11 +1,11 @@
 /* Estilo para el contenedor principal */
-.container {
+/*.container {
     text-align: center;
     margin: 20px;
   }
-  
+  */
   /* Estilo para el botón de inicio de sesión */
-  .login-button {
+  /*.login-button {
     background-color: #007bff;
     color: #fff;
     border: none;
@@ -18,7 +18,7 @@
   }
   
   /* Estilo para el botón de cierre de sesión */
-  .logout-button {
+  /*.logout-button {
     background-color: #dc3545;
     color: #fff;
     border: none;
@@ -31,18 +31,19 @@
   }
   
   /* Estilo para el mensaje de bienvenida */
-.welcome-message {
+/*.welcome-message {
     font-size: 24px;
     margin-top: 20px;
   }
   
   /* Estilo para el correo electrónico */
-.email {
+/*.email {
     font-size: 18px;
     margin-top: 10px;
   }
-
+*/
 
 body {
+  font-family: 'Roboto', sans-serif;
   background-color: #2475D9;
 }
